K8sYAML/02_postgres_dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: pleasanter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: docker.io/ken6989k10/postgres:17
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pleasanter-pgdata-pvc
