K8sYAML/05_pleasanter_dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: implempleasanter-pleasanter
  namespace: pleasanter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: implempleasanter-pleasanter
  template:
    metadata:
      labels:
        app: implempleasanter-pleasanter
    spec:
      containers:
        - name: implempleasanter-pleasanter
          image: docker.io/ken6989k10/implempleasanter-pleasanter:latest
          command: ["dotnet"]
          args: ["Implem.Pleasanter.dll"]
          ports:
            - containerPort: 8080
