K8sYAML/03_postgres_sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pleasanter
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
