K8sYAML/06_pleasanter_sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: implempleasanter-pleasanter
  namespace: pleasanter
spec:
  selector:
    app: implempleasanter-pleasanter
  ports:
    - appProtocol: http
      name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
