K8sYAML/07_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-live
  name: implempleasanter-pleasanter
  namespace: pleasanter
spec:
  ingressClassName: nginx
  rules:
  - host: pleasanter.san.bizaxis-dev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: implempleasanter-pleasanter
            port:
              number: 80
  tls:
  - hosts:
    - pleasanter.san.bizaxis-dev.com
    secretName: pleasanter-tls
